✏️ Fix typos and removed unused imports